[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
line_length = 90
combine_as_imports = true
balanced_wrapping = true
lines_after_imports = 2
skip = "venvs/"
not_skip = "__init__.py"
multi_line_output = 5
include_trailing_comma = true

import_heading_stdlib = "built-in"
import_heading_thirdparty = "external"
import_heading_firstparty = "project"
import_heading_localfolder = "app"


[tool.flit.metadata]
module = "svg"
license = "MIT"
author = "Gram"
author-email = "gram@orsinium.dev"
home-page = "https://github.com/orsinium-labs/svg"
description-file = "README.md"
requires-python = ">=3.7"
keywords = "svg,drawing,vector"
requires = []

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
]

[tool.flit.metadata.requires-extra]
dev = [
    "isort",
    "mypy",
    "pytest",
]
